# claude-code-rs

./: Cargo.toml  README.md  REVIEW.md
examples/: hooks.rs  mcp_calculator.rs  quick_start.rs  streaming.rs
src/: client.rs  error.rs  lib.rs  message_parser.rs  query.rs  query_fn.rs
src/mcp/: jsonrpc.rs  mod.rs  server.rs
src/transport/: cli_discovery.rs  mod.rs  subprocess.rs
src/types/: agents.rs  content.rs  control.rs  hooks.rs  mcp_config.rs  messages.rs  mod.rs  options.rs  permissions.rs  sandbox.rs
